Changes from jTDS 0.9
=========================

10/20/2004 - Alin Sinpalean
 o Corrected a bug that was causing Charsets.properties not to be loaded under
   Db-Visualizer (and in any case when the file could not be loaded via the
   thread context classloader).
 o Made some minor modifications to ConnectionJDNC2.setCollation() to correctly
   translate bytes to ints.
 o Updated XaTest to drop the test tables on test end. Also prepended "jTDS_"
   to all non-temporary table names (in all tests) to ensure no conflicts with
   real tables occur.
 o Cleaned up Javadoc comments to get rid of build warnings.
 o Corrected a bug that was preventing the ConnectionPoolDataSource
   implementation from working correctly with JNDI, by having JtdsDataSource
   implement this interface, too.
 o Corrected bug [1050660] PreparedStatement.getMetaData() clears resultset.
   JtdsPreparedStatement.getMetaData() always submitted a request to obtain the
   meta data, even if the ResultSet was already available, effectively dumping
   the ResultSet. Now it tests for a current ResultSet. An even better approach
   would be to use a different TdsCore instance altogether, in any case, but I
   think it's unnecessary overhead.

10/15/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1047094] Problem with the store procedure's
   return.

10/13/2004 - Alin Sinpalean
 o Fixed a couple of errors in Support.convert(), calls to Blob.getBytes() and
   Clob.getString() with a position of 0.
 o Fixed a bug that was causing ResultSet retrieval by name to return the last
   matching column rather than the first.

10/12/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1042272] jTDS doesn't allow null value into
   Boolean. Also fixed the broken test for this bug.

10/10/2004 - Alin Sinpalean
 o Applied patch [1038937] Support for XA connections. Mike strikes again! :o)
 o Added a test for bug [1042272] jTDS doesn't allow null value into Boolean.